--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,36 @@
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 *{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Ubuntu", sans-serif;
+}
+
+body{
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  background: #1c1e29;
+}
+
+@media only screen and (max-width: 480px){
+  .lg-form{
+    min-width: 90%;
+  }
+}
+
+@media only screen and (min-width: 768px){
+  .lg-form{
+    min-width: 50%;
+  }
+}
+
+@media only screen and (min-width: 1080px){
+  .lg-form{
+    min-width: 0%;
+  }
 }
